CSS polish: theme vars, focus styles, cleanup

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta property="og:title" content="Jill Woods &middot; Web Developer">
     <meta property="og:description" content="Projects, skills, and contact.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jillwoods328.github.io">
-    <meta property="og:image" content="https://jillwoods328.github.io/images/og-image.png">
+    <meta property="og:url" content="https://Jill328.github.io">
+    <meta property="og:image" content="https://Jill328.github.io/images/og-image.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="stylesheet" href="style.css?v=3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://jillwoods328.github.io">
+    <link rel="canonical" href="https://Jill328.github.io">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Jill Woods &middot; Web Developer | Frontend & Portfolio</title>
 </head>
